--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "covid19india",
   "version": "1.0.0",
   "private": true,
-  "homepage": "http://covid19india.github.io/",
+  "homepage": "https://covid19india.slanglabs.in/",
   "dependencies": {
     "@juggle/resize-observer": "^3.1.3",
     "@material-ui/core": "^4.9.9",
@@ -29,7 +29,8 @@
     "react-scripts": "3.4.0",
     "react-table": "^7.0.4",
     "sass-lint": "^1.13.1",
-    "topojson": "^3.0.2"
+    "topojson": "^3.0.2",
+    "slang-web-sdk": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
