--- a/package.json
+++ b/package.json
@@ -4,20 +4,31 @@
   "private": true,
   "homepage": "https://covid19india.slanglabs.in/",
   "dependencies": {
+    "@juggle/resize-observer": "^3.1.3",
+    "@material-ui/core": "^4.9.9",
+    "@material-ui/icons": "^4.9.1",
+    "@testing-library/jest-dom": "^5.3.0",
+    "@testing-library/react": "^10.0.1",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "d3": "^5.15.0",
     "d3-svg-legend": "^2.25.6",
     "date-fns": "^2.11.0",
+    "i": "^0.3.6",
     "install": "^0.13.0",
     "json2csv": "^5.0.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
-    "npm": "^6.14.3",
     "react": "^16.13.1",
+    "react-autosuggest": "^10.0.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.3",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-ga": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-table": "^7.0.4",
     "sass-lint": "^1.13.1",
     "slang-web-sdk": "^1.0.0",
     "topojson": "^3.0.2"
