--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.3",
-    "react-infinite-scroll-component": "^5.0.4",
     "react-ga": "^2.7.0",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-table": "^7.0.4",
     "sass-lint": "^1.13.1",
-    "slang-web-sdk": "^1.0.0",
+    "slang-web-sdk-local": "file:./private/slang-web-sdk-local",
     "topojson": "^3.0.2"
   },
   "scripts": {
