--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^10.0.1",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
+    "covid19-india-voice-assistant": "0.1.3",
     "d3": "^5.15.0",
     "d3-svg-legend": "^2.25.6",
     "date-fns": "^2.11.0",
@@ -30,7 +31,6 @@
     "react-scripts": "3.4.0",
     "react-table": "^7.0.4",
     "sass-lint": "^1.13.1",
-    "slang-web-sdk-local": "file:./private/slang-web-sdk-local",
     "topojson": "^3.0.2"
   },
   "scripts": {
